--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -3766,3 +3766,254 @@ acceptedBreaks:
       new: "method net.fortuna.ical4j.model.Recur<T> net.fortuna.ical4j.model.property.ExRule<T\
         \ extends java.time.temporal.Temporal>::getRecur()"
       justification: "exrule_added_generics"
+  "4.0.4":
+    org.mnode.ical4j:ical4j:
+    - code: "java.class.defaultSerializationChanged"
+      old: "class net.fortuna.ical4j.validate.ValidationRule<T extends java.lang.Object>"
+      new: "class net.fortuna.ical4j.validate.ValidationRule<T extends java.lang.Object>"
+      justification: "refactoring_validation"
+    - code: "java.class.nowImplementsInterface"
+      old: "class net.fortuna.ical4j.model.property.ExRule.Factory"
+      new: "class net.fortuna.ical4j.model.property.ExRule.Factory<T extends java.time.temporal.Temporal>"
+      justification: "refactoring_validation"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.calendar.AbstractMethodTransformer"
+      justification: "refactoring_validation"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.calendar.AddTransformer"
+      justification: "refactoring_validation"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.calendar.CancelTransformer"
+      justification: "refactoring_validation"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.calendar.CounterTransformer"
+      justification: "refactoring_validation"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.calendar.DeclineCounterTransformer"
+      justification: "refactoring_validation"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.calendar.MethodUpdate"
+      justification: "refactoring_validation"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.calendar.PublishTransformer"
+      justification: "refactoring_validation"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.calendar.RefreshTransformer"
+      justification: "refactoring_validation"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.calendar.ReplyTransformer"
+      justification: "refactoring_validation"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.calendar.RequestTransformer"
+      justification: "refactoring_validation"
+    - code: "java.class.superTypeTypeParametersChanged"
+      old: "class net.fortuna.ical4j.model.property.ExRule.Factory"
+      new: "class net.fortuna.ical4j.model.property.ExRule.Factory<T extends java.time.temporal.Temporal>"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.ACTION"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.ATTACH_BIN"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.ATTACH_URI"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.ATTENDEE"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.CALSCALE"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.CATEGORIES"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.CLAZZ"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.COMMENT"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.COMPLETED"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.CONTACT"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.CREATED"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.DESCRIPTION"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.DTEND"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.DTSTAMP"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.DTSTART"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.DUE"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.DURATION"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.EXDATE"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.FREEBUSY"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.GEO"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.LAST_MODIFIED"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.LOCATION"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.METHOD"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.ORGANIZER"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.PERCENT_COMPLETE"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.PRIORITY"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.PROD_ID"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.RDATE"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.RECURRENCE_ID"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.RELATED_TO"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.REPEAT"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.RESOURCES"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.RRULE"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.SEQUENCE"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.STATUS"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.SUMMARY"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.TRANSP"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.TRIGGER_ABS"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.TRIGGER_REL"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.TZID"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.TZNAME"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.TZOFFSETFROM"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.TZOFFSETTO"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.TZURL"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.UID"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.URL"
+      justification: "refactoring_validation"
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.VERSION"
+      justification: "refactoring_validation"
+    - code: "java.generics.elementNowParameterized"
+      old: "class net.fortuna.ical4j.model.property.ExRule.Factory"
+      new: "class net.fortuna.ical4j.model.property.ExRule.Factory<T extends java.time.temporal.Temporal>"
+      justification: "refactoring_validation"
+    - code: "java.generics.formalTypeParameterAdded"
+      old: "class net.fortuna.ical4j.model.property.ExRule.Factory"
+      new: "class net.fortuna.ical4j.model.property.ExRule.Factory<T extends java.time.temporal.Temporal>"
+      justification: "refactoring_validation"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <R extends T extends java.lang.Object> R net.fortuna.ical4j.model.Prototype<T>::copy()"
+      new: "method T net.fortuna.ical4j.model.Prototype<T>::copy()"
+      justification: "refactoring_validation"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <T extends net.fortuna.ical4j.model.Property> T net.fortuna.ical4j.model.Property::copy()"
+      new: "method net.fortuna.ical4j.model.Property net.fortuna.ical4j.model.Property::copy()"
+      justification: "refactoring_validation"
+    - code: "java.method.numberOfParametersChanged"
+      old: "method void net.fortuna.ical4j.validate.ValidationRule<T>::<init>(net.fortuna.ical4j.validate.ValidationRule.ValidationType,\
+        \ java.util.function.Predicate<T>, java.lang.String, java.lang.String[])"
+      new: "method void net.fortuna.ical4j.validate.ValidationRule<T>::<init>(java.util.function.Predicate<T>,\
+        \ java.lang.String, java.lang.String[])"
+      justification: "refactoring_validation"
+    - code: "java.method.parameterTypeChanged"
+      old: "parameter void net.fortuna.ical4j.validate.ValidationRule<T>::<init>(===net.fortuna.ical4j.validate.ValidationRule.ValidationType===,\
+        \ java.util.function.Predicate<T>, boolean, java.lang.String[])"
+      new: "parameter void net.fortuna.ical4j.validate.ValidationRule<T>::<init>(===java.util.function.Predicate<T>===,\
+        \ java.lang.String, boolean, java.lang.String[])"
+      justification: "refactoring_validation"
+    - code: "java.method.parameterTypeChanged"
+      old: "parameter void net.fortuna.ical4j.validate.ValidationRule<T>::<init>(net.fortuna.ical4j.validate.ValidationRule.ValidationType,\
+        \ ===java.util.function.Predicate<T>===, boolean, java.lang.String[])"
+      new: "parameter void net.fortuna.ical4j.validate.ValidationRule<T>::<init>(java.util.function.Predicate<T>,\
+        \ ===java.lang.String===, boolean, java.lang.String[])"
+      justification: "refactoring_validation"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <R extends T extends java.lang.Object> R net.fortuna.ical4j.model.Prototype<T>::copy()"
+      new: "method T net.fortuna.ical4j.model.Prototype<T>::copy()"
+      justification: "refactoring_validation"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <T extends net.fortuna.ical4j.model.Property> T net.fortuna.ical4j.model.Property::copy()"
+      new: "method net.fortuna.ical4j.model.Property net.fortuna.ical4j.model.Property::copy()"
+      justification: "refactoring_validation"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method net.fortuna.ical4j.model.PropertyFactory<net.fortuna.ical4j.model.property.ExRule>\
+        \ net.fortuna.ical4j.model.property.ExRule<T extends java.time.temporal.Temporal>::newFactory()"
+      new: "method net.fortuna.ical4j.model.PropertyFactory<net.fortuna.ical4j.model.property.ExRule<T>>\
+        \ net.fortuna.ical4j.model.property.ExRule<T extends java.time.temporal.Temporal>::newFactory()"
+      justification: "refactoring_validation"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method net.fortuna.ical4j.model.property.ExRule net.fortuna.ical4j.model.property.ExRule.Factory::createProperty()"
+      new: "method net.fortuna.ical4j.model.property.ExRule<T> net.fortuna.ical4j.model.property.ExRule.Factory<T\
+        \ extends java.time.temporal.Temporal>::createProperty()"
+      justification: "refactoring_validation"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method net.fortuna.ical4j.model.property.ExRule net.fortuna.ical4j.model.property.ExRule.Factory::createProperty(net.fortuna.ical4j.model.ParameterList,\
+        \ java.lang.String)"
+      new: "method net.fortuna.ical4j.model.property.ExRule<T> net.fortuna.ical4j.model.property.ExRule.Factory<T\
+        \ extends java.time.temporal.Temporal>::createProperty(net.fortuna.ical4j.model.ParameterList,\
+        \ java.lang.String)"
+      justification: "refactoring_validation"
+    - code: "java.method.visibilityReduced"
+      old: "method void net.fortuna.ical4j.validate.ValidationRule<T>::<init>(net.fortuna.ical4j.validate.ValidationRule.ValidationType,\
+        \ java.util.function.Predicate<T>, java.lang.String, boolean, java.lang.String[])"
+      new: "method void net.fortuna.ical4j.validate.ValidationRule<T>::<init>(net.fortuna.ical4j.validate.ValidationRule.ValidationType,\
+        \ java.util.function.Predicate<T>, java.lang.String, boolean, java.lang.String[])"
+      justification: "refactoring_validation"
