Refactored to use a set for TextList implementation to ensure no duplicate values

--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -3985,6 +3985,18 @@ acceptedBreaks:
       new: "parameter void net.fortuna.ical4j.validate.ValidationRule<T>::<init>(java.util.function.Predicate<T>,\
         \ ===java.lang.String===, boolean, java.lang.String[])"
       justification: "refactoring_validation"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.List<java.lang.String> net.fortuna.ical4j.model.TextList::getTexts()"
+      new: "method java.util.Set<java.lang.String> net.fortuna.ical4j.model.TextList::getTexts()"
+      justification: "refactoring_textlist_using_set"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.List<java.lang.String> net.fortuna.ical4j.model.property.Categories::getCategories()"
+      new: "method net.fortuna.ical4j.model.TextList net.fortuna.ical4j.model.property.Categories::getCategories()"
+      justification: "refactoring_textlist_using_set"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.List<java.lang.String> net.fortuna.ical4j.model.property.Resources::getResources()"
+      new: "method net.fortuna.ical4j.model.TextList net.fortuna.ical4j.model.property.Resources::getResources()"
+      justification: "refactoring_textlist_using_set"
     - code: "java.method.returnTypeTypeParametersChanged"
       old: "method <R extends T extends java.lang.Object> R net.fortuna.ical4j.model.Prototype<T>::copy()"
       new: "method T net.fortuna.ical4j.model.Prototype<T>::copy()"
