--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      
+      checks: write
+      pull-requests: write
+
     strategy:
       fail-fast: false
       matrix:
