--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ commonsValidatorVersion = 1.8.0
 threetenExtraVersion = 1.8.0
 jparsecVersion = 3.1
 jsonSkemaVersion = 0.11.0
+caffeineVersion = 3.1.8
 
 groovyVersion = 3.0.22
 bndVersion = 6.3.1
@@ -19,7 +20,7 @@ junitVintageVersion = 5.10.2
 # to make versions match
 hamcrestVersion = 2.2
 spockVersion = 2.4-M4-groovy-3.0
-testcontainersVersion = 1.19.8
+testcontainersVersion = 1.20.4
 
 jacoco_htmlReport = true
 
