--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -4472,6 +4472,18 @@ acceptedBreaks:
       new: "class net.fortuna.ical4j.model.property.immutable.ImmutableVersion"
       justification: "refactoring_prototype"
     - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.validate.ComponentValidator<T extends net.fortuna.ical4j.model.Component>"
+      new: "class net.fortuna.ical4j.validate.ComponentValidator<T extends net.fortuna.ical4j.model.Component>"
+      justification: "refactoring_generics"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.validate.component.VEventValidator"
+      new: "class net.fortuna.ical4j.validate.component.VEventValidator"
+      justification: "refactoring_generics"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.validate.component.VToDoValidator"
+      new: "class net.fortuna.ical4j.validate.component.VToDoValidator"
+      justification: "refactoring_generics"
+    - code: "java.class.noLongerImplementsInterface"
       old: "interface net.fortuna.ical4j.model.RecurrenceSupport<T extends net.fortuna.ical4j.model.component.CalendarComponent>"
       new: "interface net.fortuna.ical4j.model.RecurrenceSupport<T extends net.fortuna.ical4j.model.component.CalendarComponent>"
       justification: "refactoring_prototype"
@@ -4508,13 +4520,25 @@ acceptedBreaks:
       new: "class net.fortuna.ical4j.model.component.VToDo"
       justification: "refactoring_prototype"
     - code: "java.class.nowImplementsInterface"
+      old: "class net.fortuna.ical4j.validate.ComponentValidator<T extends net.fortuna.ical4j.model.Component>"
+      new: "class net.fortuna.ical4j.validate.ComponentValidator<T extends net.fortuna.ical4j.model.Component>"
+      justification: "refactoring_generics"
+    - code: "java.class.nowImplementsInterface"
       old: "interface net.fortuna.ical4j.model.RecurrenceSupport<T extends net.fortuna.ical4j.model.component.CalendarComponent>"
       new: "interface net.fortuna.ical4j.model.RecurrenceSupport<T extends net.fortuna.ical4j.model.component.CalendarComponent>"
       justification: "refactoring_prototype"
     - code: "java.class.superTypeTypeParametersChanged"
+      old: "class net.fortuna.ical4j.validate.ComponentValidator<T extends net.fortuna.ical4j.model.Component>"
+      new: "class net.fortuna.ical4j.validate.ComponentValidator<T extends net.fortuna.ical4j.model.Component>"
+      justification: "refactoring_generics"
+    - code: "java.class.superTypeTypeParametersChanged"
       old: "interface net.fortuna.ical4j.model.RecurrenceSupport<T extends net.fortuna.ical4j.model.component.CalendarComponent>"
       new: "interface net.fortuna.ical4j.model.RecurrenceSupport<T extends net.fortuna.ical4j.model.component.CalendarComponent>"
       justification: "refactoring_prototype"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "interface net.fortuna.ical4j.validate.ContentValidator<T extends net.fortuna.ical4j.model.Content>"
+      new: "interface net.fortuna.ical4j.validate.ContentValidator"
+      justification: "refactoring_generics"
     - code: "java.method.exception.checkedRemoved"
       old: "method java.util.List<T> net.fortuna.ical4j.model.RecurrenceSupport<T\
         \ extends net.fortuna.ical4j.model.component.CalendarComponent>::getOccurrences(net.fortuna.ical4j.model.Period<java.time.temporal.Temporal>)\
